--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -3,7 +3,15 @@ body {
     background-color: #f5f5dc;
     color: #2e2e2e;
     margin: 0;
-    padding: 20px 15% 0;
+    padding: 20px 12% 0;
+}
+
+header {
+    background-color: #aeae9e;
+    padding: 15px 20px;
+    text-align: left;
+    border-radius: 5px;
+    margin-bottom: 20px;
 }
 
 h1, h2, h3 {
@@ -113,4 +121,9 @@ h1 + .a-button, h2 + .a-button, h3 + .a-button {
 
 .pagination {
     margin-top: 5px;
+}
+
+.container {
+    padding: 10px;
+    margin: 0;
 }
